2008-12-11  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Mark Rowe.

        Roll out r39212 due to assertion failures during layout tests, multiple
        layout test failures, memory leaks, and obvious incorrectness.

        * WebView/WebPreferenceKeysPrivate.h:
        * WebView/WebPreferences.mm:
        (-[WebPreferences fullDocumentTeardownEnabled]):
        * WebView/WebPreferencesPrivate.h:

2008-12-11  Stephanie Lewis  <slewis@apple.com>

        Fix build.

        * WebView/WebView.mm:

2008-12-11  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Oliver Hunt.

        Empty Web cache before quitting a debug build in order
        to report accurate CachedResource leaks.

        * WebView/WebView.mm:
        (-[WebView _close]):

2008-12-11  Anders Carlsson  <andersca@apple.com>

        Fix Tiger build.

        * Misc/WebNSDataExtras.h:

2008-12-11  Anders Carlsson  <andersca@apple.com>

        Reviewed by Cameron Zwarich.

        https://bugs.webkit.org/show_bug.cgi?id=22797
        REGRESSION: Crash at http://news.cnet.com/8301-17939_109-10119149-2.html

        Make sure to protect the stream because destroyStream can otherwise cause it to be deleted.
        
        * Plugins/WebBaseNetscapePluginStream.mm:
        (WebNetscapePluginStream::destroyStreamWithReason):

2008-12-10  Glenn Wilson  <gwilson@google.com>

        Reviewed by Adam Roben.

        Added new methods for overriding default WebPreference values
        and for resetting preferences to their defaults.
        https://bugs.webkit.org/show_bug.cgi?id=20534

        * WebView/WebPreferenceKeysPrivate.h:
        * WebView/WebPreferences.mm:
        (-[WebPreferences resetToDefaults]): new method
        (-[WebPreferences overridePreference:flag:]): new method
        * WebView/WebPreferencesPrivate.h: new method signatures

2008-12-10  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.
